# open-agent-kit

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  SECURITY.md  install.ps1  install.sh  opencode.json  package-lock.json  package.json  pyproject.toml
.agents/skills/codebase-intelligence/references/: schema.md
.agents/skills/context-engineering/: SKILL.md
.agents/skills/oak/: SKILL.md
.agents/skills/oak/references/: finding-related-code.md  querying-databases.md
.claude/: settings.json
.claude/skills/dependency-audit/: SKILL.md
.claude/skills/oak/references/: queries.md
.claude/skills/pattern-finder/: SKILL.md
.claude/skills/swarm-report/: SKILL.md
.claude/skills/swarm-report/references/: report-examples.md
.codex/: config.toml
.cursor/: hooks.json  mcp.json
.cursor/skills/codebase-intelligence/: SKILL.md
.cursor/skills/oak/references/: analysis-playbooks.md  impact-analysis.md  schema.md
.cursor/skills/swarm/: SKILL.md
.gemini/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report_agent.yml  bug_report_cli.yml  feature_request.yml
.github/hooks/: oak-ci-hooks.json
.github/workflows/: docs.yml  pr-check.yml  release.yml
.oak/: config.yaml  state.yaml
.opencode/plugins/: oak-ci.ts
.windsurf/: hooks.json
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: cli.md  configuration.md  index.mdx  releasing.md  troubleshooting.md
docs/src/content/docs/agents/: index.md  skills.md
docs/src/content/docs/api/: mcp-tools.md
docs/src/content/docs/swarm/: index.md  mcp.md
docs/src/content/docs/team/: acp.md  activities.md  agents.md  analysis-agent.md  configuration.md  dashboard.md  developer-api.md  devtools.md  documentation-agent.md  engineering-agent.md  getting-started.md  governance.md  hooks-reference.md  index.md  logs.md  maintenance-agent.md  mcp.md  memory.md  session-lifecycle.md  sync.md
oak/: constitution.md
oak/agents/: docs-site-sync.yaml
oak/insights/: prompt-analysis.md
scripts/: acp_smoke_test.py
src/open_agent_kit/: cli.py  constants.py
src/open_agent_kit/agents/claude/: manifest.yaml
src/open_agent_kit/agents/codex/: manifest.yaml
src/open_agent_kit/agents/cursor/: manifest.yaml
src/open_agent_kit/agents/gemini/: manifest.yaml
src/open_agent_kit/agents/opencode/: manifest.yaml
src/open_agent_kit/agents/vscode-copilot/: manifest.yaml
src/open_agent_kit/agents/windsurf/: manifest.yaml
src/open_agent_kit/commands/: ci_cmd.py  init_cmd.py  upgrade_cmd.py
src/open_agent_kit/commands/ci/: __init__.py  config.py  daemon.py  data.py  dev.py  hooks.py  index.py  notify.py  query.py  search.py  sync.py  team.py
src/open_agent_kit/commands/team/: __init__.py  cloud.py  daemon.py  mcp.py  members.py
src/open_agent_kit/config/: messages.py  paths.py
src/open_agent_kit/features/: __init__.py
src/open_agent_kit/features/acp_server/: __init__.py  agent.py  bridge.py  constants.py  daemon_client.py  manifest.yaml
src/open_agent_kit/features/agent_runtime/: __init__.py  constants.py  executor.py  interactive.py  manifest.yaml  mcp_cache.py  models.py  registry.py  run_store.py  scheduler.py  tools.py
src/open_agent_kit/features/codebase_intelligence/: cli_command.py  constants.py
src/open_agent_kit/features/swarm/: __init__.py  config.py  constants.py  deploy.py  manifest.yaml  scaffold.py  tool_schema.py
src/open_agent_kit/features/swarm/agents/: tools.py
src/open_agent_kit/features/team/: __init__.py  cli_command.py  deps.py  exceptions.py  manifest.yaml  plan_detector.py  prompt_classifier.py  schema.yaml  service.py  transcript.py  transcript_resolver.py
src/open_agent_kit/models/: agent_manifest.py  config.py
src/open_agent_kit/pipeline/: executor.py  ordering.py
src/open_agent_kit/pipeline/stages/: config.py  hooks.py  mcp.py  removal.py  skills.py  upgrade.py
src/open_agent_kit/services/: agent_settings_service.py  feature_service.py  hook_dispatcher.py  migrations.py  package_installer_service.py  prerequisite_checker.py  skill_service.py  upgrade_plan.py  upgrade_service.py
src/open_agent_kit/ui/shared/: package-lock.json  package.json  tsconfig.json
src/open_agent_kit/utils/: daemon_lifecycle.py  daemon_manager.py  env_utils.py  file_utils.py  naming.py  release_channel.py  worker_deploy_shared.py  worker_scaffold_shared.py
tests/: test_agent_settings_service.py  test_cli_init.py  test_feature_service.py  test_github_workflows.py  test_hooks_installer_upgrade.py  test_install_scripts.py  test_pipeline_stages.py  test_skill_service.py  test_template_service.py  test_upgrade.py
tests/features/codebase_intelligence/tools/: test_federation.py  test_federation_smoke.py  test_mcp_tools.py
tests/features/team/agents/: test_analysis_agent.py  test_ci_query_tool.py
tests/features/team/indexing/: test_indexer_security.py
tests/features/team/memory/: test_vector_store.py
tests/features/team/tools/: test_federation.py  test_federation_smoke.py  test_mcp_tools.py
tests/unit/commands/ci/: test_team_cmd.py
tests/unit/features/acp_server/: test_agent.py  test_bridge.py  test_daemon_client.py
tests/unit/features/codebase_intelligence/: conftest.py  test_cli_command.py  test_config.py  test_create_backup.py
tests/unit/features/swarm/: test_capability_constants.py  test_capability_routing.py  test_tool_schema.py
tests/unit/features/team/: QUICK_START.md  TEST_SUITE_SUMMARY.md  __init__.py  conftest.py  fixtures.py  test_activity.py  test_backup_config.py  test_cli_command.py  test_cli_version_hint.py  test_config.py  test_constants.py  test_create_backup.py  test_embeddings.py  test_exceptions.py  test_find_project_root.py  test_memory_store.py  test_plan_detector.py  test_prompt_classifier.py  test_redact.py  test_service.py  test_session_summary.py  test_session_transcript_path.py  test_transcript.py
tests/unit/services/: test_migration_cleanup_builtin_tasks.py
tests/unit/utils/: test_daemon_manager.py  test_naming.py
(+874 files in other folders)
